<resources>
    <string name="app_name">SMS Import / Export</string>
    <string name="export_messages_button_label">Export Messages</string>
    <string name="import_messages_button_label">Import Messages</string>
    <string name="export_call_log_button_label">Export Call Log</string>
    <string name="import_call_log_button_label">Import Call Log</string>
    <string name="ready">Ready</string>
    <string name="sms_export_progress">%1$d of %2$d SMS(s) exported</string>
    <string name="mms_export_progress">%1$d of %2$d MMS(s) exported</string>
    <string name="message_import_progress">%1$d SMS(s) and %2$d MMS(s) imported</string>
    <string name="call_log_export_progress">%1$d of %2$d call(s) exported</string>
    <string name="call_log_import_progress">%1$d call(s) imported</string>
    <string name="contacts_export_progress">%1$d of %2$d contact(s) exported</string>
    <string name="contacts_import_progress">%1$d contact(s) imported</string>
    <string name="blocked_numbers_export_progress">%1$d of %2$d blocked number(s) exported</string>
    <string name="blocked_numbers_import_progress">%1$d blocked number(s) imported</string>
    <string name="export_messages_results">%1$d SMS(s) and %2$d MMS(s) exported\nElapsed time: %3$s</string>
    <string name="import_messages_results">%1$d SMS(s) and %2$d MMS(s) imported\nElapsed time: %3$s</string>
    <string name="export_call_log_results">%1$d call(s) exported\nElapsed time: %2$s</string>
    <string name="import_call_log_results">%1$d call(s) imported\nElapsed time: %2$s</string>
    <string name="export_contacts_results">%1$d contact(s) exported\nElapsed time: %2$s</string>
    <string name="import_contacts_results">%1$d contact(s) imported\nElapsed time: %2$s</string>
    <string name="export_blocked_numbers_results">%1$d blocked number(s) exported\nElapsed time: %2$s</string>
    <string name="import_blocked_numbers_results">%1$d blocked number(s) imported\nElapsed time: %2$s</string>
    <string name="count_messages_results">%1$d SMS(s) and %2$d MMS(s) counted</string>
    <string name="scheduled_export_error_title">Scheduled export error</string>
    <string name="messages_export_error_title">Messages export error</string>
    <string name="messages_import_error_title">Messages import error</string>
    <string name="call_log_export_error_title">Call log export error</string>
    <string name="call_log_import_error_title">Call log import error</string>
    <string name="contacts_export_error_title">Contacts export error</string>
    <string name="contacts_import_error_title">Contacts import error</string>
    <string name="blocked_numbers_export_error_title">Blocked numbers export error</string>
    <string name="blocked_numbers_import_error_title">Blocked numbers import error</string>
    <string name="messages_wipe_error_title">Messages wipe error</string>
    <string name="messages_count_error_title">Messages count error</string>
    <string name="json_parse_error">Error parsing JSON file. Please make sure that the provided file is a JSON file in the correct format.</string>
    <string name="missing_messages_ndjson_error">Can\'t find \'messages.ndjson\'. Please make sure that the provided file is a ZIP file in the correct format.</string>
    <string name="missing_blocked_numbers_ndjson_error">Can\'t find \'blocked_numbers.ndjson\'. Please make sure that the provided file is a ZIP file in the correct format.</string>
    <string name="see_logcat_save_disabled">See logcat for more information. Enable \"Save logcat\" in the debug settings to automatically save the logcat to a file for future operations.</string>
    <string name="see_logcat_save_enabled">See logcat in the log directory for more information.</string>
    <string name="open_log_dir">Open log directory</string>
    <string name="sms_and_contacts_read_permissions_required">Exporting messages requires permission to read SMSs and contacts.</string>
    <string name="call_logs_permissions_required">Exporting call logs requires permission to read Call Logs and Contacts.</string>
    <string name="call_logs_read_write_permissions_required">Importing call logs requires permission to read and write call logs.</string>
    <string name="contacts_read_permission_required">Exporting contacts requires permission to read Contacts.</string>
    <string name="contacts_write_permissions_required">Importing contacts requires permission to write Contacts.</string>
    <string name="sms_read_permission_required">Counting messages requires permission to read SMSs.</string>
    <string name="settings">Settings</string>
    <string name="persistent_channel_name">Background services</string>
    <string name="persistent_channel_description">Persistent notification for background scheduled exports</string>
    <string name="alerts_channel_name">Scheduled export alerts</string>
    <string name="alerts_channel_description">Success/failure alerts when scheduled exports complete</string>
    <string name="scheduled_export_executing">Scheduled export executing</string>
    <string name="scheduled_export_executed">Scheduled export executed</string>
    <string name="scheduled_export_success">%1$d SMS(s), %2$d MMS(s), %3$d calls, and %4$d contacts exported.</string>
    <string name="wipe_messages">Wipe Messages</string>
    <string name="dialog_confirm_wipe">Warning: Wipe all messages (subject to message filtering, if enabled) from this device permanently, without being able to undo it\?</string>
    <string name="wipe">Wipe</string>
    <string name="cancel">Cancel</string>
    <string name="operation_cancelled">Operation cancelled</string>
    <string name="wipe_cancelled">Wipe cancelled</string>
    <string name="messages_wiped">Messages wiped</string>
    <string name="wiping_sms_messages">Wiping SMS messages …</string>
    <string name="wiping_mms_messages">Wiping MMS messages …</string>
    <string name="app_about_text">SMS Import / Export
\n
\nby Thomas More
\nand other contributors
\n
\nVersion %1$s
\n
\nCopyright © 2021–2026
\n
\nReleased under the GNU GPLv3</string>
    <string name="homepage">Homepage:</string>
    <string name="app_homepage" translatable="false">https://github.com/tmo1/sms-ie</string>
    <string name="documentation">Documentation:</string>
    <string name="app_documentation" translatable="false">https://github.com/tmo1/sms-ie#readme</string>
    <string name="issue_tracker">Issue tracker:</string>
    <string name="app_issue_tracker" translatable="false">https://github.com/tmo1/sms-ie/issues</string>
    <string name="about">About</string>
    <string name="export_contacts">Export Contacts</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="copying_mms_binary_data">Copying MMS binary data …</string>
    <string name="exporting_messages">Exporting messages …</string>
    <string name="importing_messages">Importing messages …</string>
    <string name="exporting_calls">Exporting calls …</string>
    <string name="importing_calls">Importing calls …</string>
    <string name="exporting_contacts">Exporting contacts …</string>
    <string name="importing_contacts">Importing contacts …</string>
    <string name="exporting_blocked_numbers">Exporting blocked numbers …</string>
    <string name="importing_blocked_numbers">Importing blocked numbers …</string>
    <string name="wiping_messages">Wiping messages …</string>
    <string name="counting_messages">Counting messages …</string>
    <string name="message_filters_header">Message filters</string>
    <string name="add_message_filter_button_label">Add message filter</string>
    <string name="enable_message_filtering_note">Note: message filtering must be enabled in the app\'s settings in order for these filters to be used.</string>
    <string name="tap_filter_to_edit_or_delete">Tap a filter to edit or delete it</string>
    <string name="value">column value</string>
    <string name="column_name">Column Name:</string>
    <string name="operator">Operator:</string>
    <string name="column_value">Column Value:</string>
    <string name="active">Active:</string>
    <string name="pref_header_encryption">Encryption</string>
    <string name="pref_header_scheduled_export">Scheduled export</string>
    <string name="pref_header_export_options">Export options</string>
    <string name="pref_header_import_options">Import options</string>
    <string name="pref_header_debugging_options">Debugging options</string>
    <string name="pref_message_filtering_title">Enable message filtering</string>
    <string name="pref_encryption_manual_operations_title">Perform encryption and decryption for manual operations</string>
    <string name="pref_encryption_stored_passphrase_manual_operations_title">Use stored passphrase for encryption and decryption for manual operations</string>
    <string name="pref_encryption_scheduled_operations_title">Perform encryption for scheduled operations (using stored passphrase)</string>
    <string name="pref_last_successful_scheduled_export_title">Last successful scheduled export:</string>
    <string name="pref_next_scheduled_export_title">Next scheduled export:</string>
    <string name="pref_schedule_export_title">Enable scheduled export</string>
    <string name="pref_export_time_title">Export at:</string>
    <string name="pref_export_interval_days_title">Export interval (days):</string>
    <string name="pref_export_dir_title">Export directory:</string>
    <string name="pref_export_success_notification_title">Export success notification</string>
    <string name="pref_export_success_notification_summary">A notification will always be issued upon export failure, regardless of the value of this setting.</string>
    <string name="pref_disable_battery_optimizations_title">Disable battery optimizations</string>
    <string name="pref_disable_battery_optimizations_summary">Required on Android 14+ when exporting many items.</string>
    <string name="pref_delete_old_exports_title">Delete old exports</string>
    <string name="pref_remove_datestamps_from_filenames_title">Remove datestamps from filenames</string>
    <string name="pref_export_messages_title">Export messages</string>
    <string name="pref_export_calls_title">Export calls</string>
    <string name="pref_export_contacts_title">Export contacts</string>
    <string name="pref_include_binary_data_title">Include binary MMS data</string>
    <string name="pref_include_blobs_title">Include BLOBs present in the MMS database table</string>
    <string name="pref_store_media_uncompressed_title">Store media parts uncompressed</string>
    <string name="pref_store_media_uncompressed_summary">Write images, audio, and video MMS parts without compression. Faster exports, slightly larger archives.</string>
    <string name="pref_deduplication_title">Message and call log entry deduplication (experimental)</string>
    <string name="pref_import_sub_ids_title">Include Subscription IDs in import</string>
    <string name="pref_excluded_addresses_title">Addresses (numbers) to exclude from thread (conversation) reconstruction (comma separated list, typically the source device phone number[s])</string>
    <string name="pref_insert_excluded_addresses_title">Insert excluded addresses into address table</string>
    <string name="pref_save_logcat_title">Save logcat</string>
    <string name="pref_debugging_title">Enable debugging options</string>
    <string name="pref_max_records_title">Maximum records (SMS messages, MMS messages, contacts, and calls) to import (messages only) or export. (Leave empty or set to 0 for all.)</string>
    <string name="pref_sms_title">Process SMS messages</string>
    <string name="pref_mms_title">Process MMS messages</string>
    <string name="pref_secretstream_chunk_size_title">SecretStream chunk size</string>
</resources>