<!--
  ~ SMS Import / Export: a simple Android app for importing and exporting SMS and MMS messages,
  ~ call logs, contacts, and blocked numbers from and to JSON / NDJSON files.
  ~
  ~ Copyright (c) 2021-2026 Thomas More
  ~ Copyright (c) 2023 Andrew Gunnerson
  ~
  ~ This file is part of SMS Import / Export.
  ~
  ~ SMS Import / Export is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SMS Import / Export is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SMS Import / Export.  If not, see <https://www.gnu.org/licenses/>
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="main_preference_screen">

    <SwitchPreferenceCompat
        android:key="message_filtering"
        android:title="@string/pref_message_filtering_title"
        app:defaultValue="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:key="encryption_preference_category"
        android:title="@string/pref_header_encryption">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="encryption_manual_operations"
            android:title="@string/pref_encryption_manual_operations_title"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="encryption_stored_passphrase_manual_operations"
            android:title="@string/pref_encryption_stored_passphrase_manual_operations_title"
            android:defaultValue="false"
            app:singleLineTitle="false"
            app:dependency="encryption_manual_operations" />

        <SwitchPreferenceCompat
            android:key="encryption_scheduled_operations"
            android:title="@string/pref_encryption_scheduled_operations_title"
            android:defaultValue="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="encryption_store_passphrase"
            android:widgetLayout="@layout/store_passphrase" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="scheduled_export_preference_category"
        android:title="@string/pref_header_scheduled_export">

        <Preference
            android:key="last_successful_scheduled_export"
            android:title="@string/pref_last_successful_scheduled_export_title"
            app:dependency="schedule_export" />

        <Preference
            android:key="next_scheduled_export"
            android:title="@string/pref_next_scheduled_export_title"
            app:dependency="schedule_export" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="schedule_export"
            android:title="@string/pref_schedule_export_title" />

        <com.github.tmo1.sms_ie.TimePickerPreference
            android:key="export_time"
            android:title="@string/pref_export_time_title"
            app:dependency="schedule_export" />

        <EditTextPreference
            android:key="export_interval_days"
            android:title="@string/pref_export_interval_days_title"
            android:defaultValue="1"
            app:dependency="schedule_export"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="export_dir"
            android:title="@string/pref_export_dir_title"
            app:dependency="schedule_export" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="export_success_notification"
            android:summary="@string/pref_export_success_notification_summary"
            android:title="@string/pref_export_success_notification_title"
            app:dependency="schedule_export" />

        <SwitchPreferenceCompat
            android:key="disable_battery_optimizations"
            android:persistent="false"
            android:summary="@string/pref_disable_battery_optimizations_summary"
            android:title="@string/pref_disable_battery_optimizations_title"
            app:dependency="schedule_export" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="delete_old_exports"
            android:title="@string/pref_delete_old_exports_title"
            app:dependency="schedule_export" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="remove_datestamps_from_filenames"
            android:title="@string/pref_remove_datestamps_from_filenames_title"
            app:dependency="delete_old_exports"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="export_messages"
            android:title="@string/pref_export_messages_title"
            app:dependency="schedule_export" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="export_calls"
            android:title="@string/pref_export_calls_title"
            app:dependency="schedule_export" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="export_contacts"
            android:title="@string/pref_export_contacts_title"
            app:dependency="schedule_export" />

        <!--<SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="export_blocked_numbers"
            android:title="@string/pref_export_blocked_numbers_title"
            app:dependency="schedule_export" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_export_options">

        <SwitchPreferenceCompat
            android:key="include_binary_data"
            android:title="@string/pref_include_binary_data_title"
            app:defaultValue="true"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="include_blobs"
            android:title="@string/pref_include_blobs_title"
            app:defaultValue="true"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="store_media_uncompressed"
            android:title="@string/pref_store_media_uncompressed_title"
            android:summary="@string/pref_store_media_uncompressed_summary"
            app:defaultValue="true"
            app:dependency="include_binary_data"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_import_options">

        <SwitchPreferenceCompat
            android:key="deduplication"
            android:title="@string/pref_deduplication_title"
            app:defaultValue="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="import_sub_ids"
            android:title="@string/pref_import_sub_ids_title"
            app:defaultValue="false"
            app:singleLineTitle="false" />

        <EditTextPreference
            android:key="excluded_addresses"
            android:title="@string/pref_excluded_addresses_title"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="insert_excluded_addresses"
            android:title="@string/pref_insert_excluded_addresses_title"
            app:defaultValue="true"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_debugging_options">

        <SwitchPreferenceCompat
            android:key="save_logcat"
            android:title="@string/pref_save_logcat_title" />

        <SwitchPreferenceCompat
            android:key="debugging"
            android:title="@string/pref_debugging_title"
            app:defaultValue="false" />

        <EditTextPreference
            android:key="max_records"
            android:title="@string/pref_max_records_title"
            app:defaultValue=""
            app:dependency="debugging"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="sms"
            android:title="@string/pref_sms_title"
            app:defaultValue="true"
            app:dependency="debugging" />

        <SwitchPreferenceCompat
            android:key="mms"
            android:title="@string/pref_mms_title"
            app:defaultValue="true"
            app:dependency="debugging" />

        <EditTextPreference
            android:key="secretstream_chunk_size"
            android:title="@string/pref_secretstream_chunk_size_title"
            app:defaultValue=""
            app:dependency="debugging"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
