<?xml version="1.0" encoding="utf-8"?><!--
  ~ SMS Import / Export: a simple Android app for importing and exporting SMS messages from and to JSON files.
  ~ Copyright (c) 2025 Thomas More
  ~
  ~ This file is part of SMS Import / Export.
  ~
  ~ SMS Import / Export is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SMS Import / Export is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SMS Import / Export.  If not, see <https://www.gnu.org/licenses/>.
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:measureWithLargestChild="true"
    android:paddingStart="?attr/dialogPreferredPadding"
    android:paddingEnd="?attr/dialogPreferredPadding"
    android:paddingTop="?attr/dialogPreferredPadding">

    <TableRow
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_name" />

        <Spinner
            android:id="@+id/message_column_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator" />

        <Spinner
            android:id="@+id/operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_value" />

        <EditText
            android:id="@+id/message_column_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:importantForAutofill="no"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/filter_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true" />
    </TableRow>
</TableLayout>
