<?xml version="1.0" encoding="utf-8"?><!--
  ~ SMS Import / Export: a simple Android app for importing and exporting SMS messages from and to JSON files.
  ~ Copyright (c) 2021-2022 Thomas More
  ~
  ~ This file is part of SMS Import / Export.
  ~
  ~ SMS Import / Export is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SMS Import / Export is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SMS Import / Export.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/export_messages_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/export_messages_button_label"
        app:layout_constraintBottom_toTopOf="@+id/export_call_log_button"
        app:layout_constraintEnd_toStartOf="@+id/import_messages_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/import_messages_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/import_messages_button_label"
        app:layout_constraintBottom_toTopOf="@+id/import_call_log_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/export_messages_button"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/export_call_log_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/export_call_log_button_label"
        app:layout_constraintBottom_toTopOf="@id/export_contacts_button"
        app:layout_constraintEnd_toStartOf="@+id/import_call_log_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/export_messages_button" />

    <Button
        android:id="@+id/import_call_log_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/import_call_log_button_label"
        app:layout_constraintBottom_toTopOf="@id/import_contacts_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/export_call_log_button"
        app:layout_constraintTop_toBottomOf="@+id/import_messages_button" />

    <Button
        android:id="@+id/export_contacts_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/export_contacts"
        app:layout_constraintBottom_toTopOf="@id/wipe_all_messages_button"
        app:layout_constraintEnd_toStartOf="@+id/import_contacts_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/export_call_log_button" />

    <Button
        android:id="@+id/import_contacts_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/import_contacts"
        app:layout_constraintBottom_toTopOf="@id/wipe_all_messages_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/export_contacts_button"
        app:layout_constraintTop_toBottomOf="@+id/import_call_log_button" />

    <Button
        android:id="@+id/wipe_all_messages_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/wipe_messages"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/export_contacts_button"
        tools:layout_editor_absoluteY="303dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/status_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ready"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="0"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/status_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>
