<?xml version="1.0" encoding="utf-8"?><!--
  ~ SMS Import / Export: a simple Android app for importing and exporting SMS and MMS messages,
  ~ call logs, and contacts, from and to JSON / NDJSON files.
  ~
  ~ Copyright (c) 2025 Thomas More
  ~
  ~ This file is part of SMS Import / Export.
  ~
  ~ SMS Import / Export is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SMS Import / Export is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SMS Import / Export.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    tools:context=".MessageFiltersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/current_message_filters"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/message_filters_header"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/message_filters_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <ListView
            android:id="@+id/message_filters_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tap_filter_to_edit_or_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_message_filters">

        </ListView>

        <TextView
            android:id="@+id/tap_filter_to_edit_or_delete"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginHorizontal="18dp"
            android:gravity="center"
            android:text="@string/tap_filter_to_edit_or_delete"
            android:textStyle="bold"
            android:visibility="gone"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/add_message_filter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_filters_list" />

        <Button
            android:id="@+id/add_message_filter_button"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginHorizontal="18dp"
            android:text="@string/add_message_filter_button_label"
            app:layout_constraintBottom_toTopOf="@id/enable_message_filtering_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tap_filter_to_edit_or_delete" />

        <TextView
            android:id="@+id/enable_message_filtering_note"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="18dp"
            android:gravity="center"
            android:text="@string/enable_message_filtering_note"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_message_filter_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
